   - ofoLedger: archive ledger balances (todo #1162).

 Bug fixes:

   - DossierSettings: update main window title when remediated (todo #1165).
   - myIWindow: do nothing is destroy is not allowed.
   - ofoAccount: now considers the beginning of the exercice when archiving (todo #1226).
   - ofaLedgerPage: fix view entries.
   - ofoRecurrentModel: insert/update the DBMS with 'enabled' property.

 Caution:
 
     Bug #1226 may in particular appear in financial accounts where it is
     frequent to have entries from previous exercices (because non conciliated)
     this creates a balistic error which continue through all the exercice.

     This bug is identified and fixed in v0.61 (Core DB model v33).

 Other changes:

   - ofaIAccountFilter: remove ofa_iaccount_filter_set_prefs() unused method.
   - ofaIDateFilter: ofa_idate_filter_set_prefs() renamed to ofa_idate_filter_set_settings_key() (todo #1220).

-----------------------------------------------------------------------
 Version 0.60
 ============

 Released on 2016-10-08
  
 New features and improvements:

   - RecurrentOperation: DB Model v5.
   - Accelerators: define new keys in Dossier menu (todo #1204).
   - AccountSelect, OpeTemplateSelect: save settings before hiding the dialog.
   - BalanceRender: improve appearance of header notes (todo #1191).
   - BalanceRender: improve columns titles (todo #1193).
   - DossierManager: disable open/delete actions on opened dossier (todo #1183).
   - DossierTreeview: disable columns depending of the filter (todo #1185).
   - EntryPage: takes advantage of ofaITVColumnable and companion interfaces (todo #1182).
   - ITVColumnable: define twins column groups. 
   - OpeTemplate: make the treeview sortable (todo #1200).
   - Reconciliation: improve display and automated proposals.
   - ReconciliationRender: add debit and credit soldes, change back summary color (todo #1195).
   - RecurrentModel: allow to be duplicated (todo #1206).